실습 재연습

--- a/machine_learning/tensorflow/CNN_details.ipynb
+++ b/machine_learning/tensorflow/CNN_details.ipynb
@@ -613,6 +613,8 @@
     "kernel = tf.reshape(k, [int(k.shape[0]), 1, 1], name='kernel')\n",
     "kernel2 = tf.reshape(k, [1, int(k.shape[0]), 1], name='kernel')\n",
     "\n",
+    "# 1 = strides 사이즈\n",
+    "# padding='VALID' : padding = 0 !\n",
     "res = tf.nn.conv1d(data, kernel, 1, 'VALID')\n",
     "tf.Session().run(res)"
    ]
@@ -676,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +690,7 @@
        " [13.0, 16.0, 14.0, 9.0]]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,13 +775,6 @@
     "# 어떻게 구현..?\n",
     "# 3D-conv는 Numpy로 어떻게!?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
