--- a/machine_learning/tensorflow/practice/CNN_prac.ipynb
+++ b/machine_learning/tensorflow/practice/CNN_prac.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CNN 구현"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -495,6 +502,181 @@
    ],
    "source": [
     "10000 / 1000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Covolution 구현"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1d Convolution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.0, 7.0, 8.0, 9.0, 11.0, 3.0, 4.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x = [1,0,2,3,0,1,1]\n",
+    "w = [2,1,3]\n",
+    "p = 1\n",
+    "s = 1\n",
+    "\n",
+    "# 필터회전 \n",
+    "w_rot = np.array(w[::-1])\n",
+    "\n",
+    "# padding시키기 전 데이터\n",
+    "x_no_padded = np.array(x)\n",
+    "\n",
+    "# padding = 1일때, 패딩 추가해 패딩시킨 데이터 만들기\n",
+    "if p > 0:\n",
+    "    zero_pad = np.zeros(shape=p)\n",
+    "    x_padded = np.concatenate([zero_pad, x_no_padded, zero_pad])\n",
+    "    \n",
+    "# Output담을 빈 리스트\n",
+    "res = []\n",
+    "# 필터를 사용해 특징 추출하도록 수행\n",
+    "    # output size 정의\n",
+    "for i in range(int((len(x_no_padded)+2*p-len(w_rot))/s) + 1):\n",
+    "    # stride 고려해서 필터 적용하도록 함\n",
+    "    j=i*s\n",
+    "    mapping_mat = x_padded[j:j+w_rot.shape[0]] * w_rot\n",
+    "    sum_mat = np.sum(mapping_mat)\n",
+    "    res.append(sum_mat)\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 8.],\n",
+       "        [11.],\n",
+       "        [ 7.],\n",
+       "        [ 9.],\n",
+       "        [ 4.]]], dtype=float32)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# using Tensorflow 1.x\n",
+    "import tensorflow as tf\n",
+    "import warnings\n",
+    "warnings.filterwarnings(action='ignore')\n",
+    "\n",
+    "i = tf.constant([1,0,2,3,0,1,1], dtype=tf.float32, name='i')\n",
+    "k = tf.constant([2,1,3], dtype=tf.float32, name='k')\n",
+    "\n",
+    "#입력 데이터를 3차원으로 바꾸어 주기\n",
+    "data = tf.reshape(i, shape=[1, int(i.shape[0]), 1], name='data')\n",
+    "kernel = tf.reshape(k, shape=[int(k.shape[0]), 1, 1], name='kernel')\n",
+    "\n",
+    "# padding='VALID' : padding = 0 !\n",
+    "res = tf.nn.conv1d(data, kernel, stride=1, padding='VALID')\n",
+    "tf.Session().run(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2d Convolution\n",
+    "\n",
+    "- 1d Convolution과 달리 ``Output을 만들어 낼때 사이즈와 필터 옮기는 사이즈는 다르다!`` 그래서 공식 따로 사용해야함!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# 입력 데이터 shape=[4,4]\n",
+    "x = [[1,3,2,4],[5,6,1,3],[1,2,0,2],[3,4,3,2]]\n",
+    "# 필터 shape=[3,3]\n",
+    "w = [[1,0,3],[1,2,1],[0,1,1]]\n",
+    "# 2차원 padding size를 튜플로 정의\n",
+    "p = (1,1)\n",
+    "# 2차원 stride size를 튜플로 정의\n",
+    "s = (1,1)\n",
+    "\n",
+    "# 필터꺼꾸로 뒤집기\n",
+    "w_rot = np.array(w[::-1])\n",
+    "\n",
+    "# padding되지 않은 입력 데이터\n",
+    "x_no_padded = np.array(x)\n",
+    "\n",
+    "# outputsize 미리 만들어 놓기(0으로 채워진 array로!)\n",
+    "n1 = x_no_padded.shape[0] + 2*p[0]\n",
+    "n2 = x_no_padded.shape[1] + 2*p[1]\n",
+    "x_padded = np.zeros(shape=(n1, n2))\n",
+    "\n",
+    "# 위 결과값에서 입력데이터 끼워넣어 놓기\n",
+    "x_padded[p[0]:p[0]+x_no_padded.shape[0],\n",
+    "        p[1]:p[1]+x_no_padded.shape[1]] = x_no_padded\n",
+    "\n",
+    "# output 담을 값\n",
+    "res = []\n",
+    "\n",
+    "# 필터 shift size = floor((패딩후입력shape-필터shape)/stride_shape) + 1\n",
+    "for i in range(0,int((x_padded.shape[0]-w_rot.shape[0])/s[0]) +1):\n",
+    "    # 2차원(가로,세로)이기 떄문에 빈 리스트 하나 더 넣어서 2차원으로 만들기\n",
+    "    res.append([])\n",
+    "    for j in range(0,int((x_padded.shape[1]-w_rot.shape[1])/s[1]) +1):\n",
+    "        mapping_mat = x_padded[i*s[0]:i*s[0]+w_rot.shape[0],\n",
+    "                              j*s[1]:j*s[1]+w_rot.shape[1]] * w_rot\n",
+    "        sum_mat = np.sum(mapping_mat)\n",
+    "        res[-1].append(sum_mat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[23.0, 17.0, 26.0, 11.0],\n",
+       " [26.0, 24.0, 25.0, 11.0],\n",
+       " [27.0, 24.0, 18.0, 10.0],\n",
+       " [13.0, 16.0, 14.0, 9.0]]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
    ]
   },
   {
