RNN hands-on practice

--- a/machine_learning/tensorflow/RNN/RNN.ipynb
+++ b/machine_learning/tensorflow/RNN/RNN.ipynb
@@ -214,9 +214,10 @@
     "basic_cell = tf.nn.rnn_cell.BasicRNNCell(num_units=n_neurons)\n",
     "# static_rnn으로 RNN cell이어 붙여서 입력 데이터(샘플) 넣어서 중간 y값들과 최종 states(=최종output) 출력\n",
     "outputs_seqs, states = tf.nn.static_rnn(basic_cell, X_seqs, dtype=tf.float32)\n",
-    "## unstack된 출력값들 stack시키고 transpose시키기 for 축변환한 샘플 데이터와 동일한 형태로 만들기 위해!\n",
+    "## unstack된 출력값들 stack시키고 transpose시키기 for 원본 X_batch와 동일한 형태로 만들기 위해!\n",
     "outputs = tf.transpose(tf.stack(outputs_seqs), perm=[1,0,2])\n",
     "\n",
+    "# Sample이 t축보다 더 바깥에 있음-> t축을 Sample축보다 바깥으로 빼내야함!\n",
     "X_batch = np.array([\n",
     "    [[0,1,2], [9,8,7]],\n",
     "    [[3,4,5], [3,4,5]],\n",
@@ -286,11 +287,13 @@
     "# dynamic_rnn = static_rnn + stack, Transpose 같이 수행해줌! \n",
     "outputs, states = tf.nn.dynamic_rnn(basic_cell, X, dtype=tf.float32)\n",
     "\n",
+    "# Sample이 t축보다 더 바깥에 있음-> t축을 Sample축보다 바깥으로 빼내야함!\n",
     "X_batch = np.array([\n",
-    "    [[0,1,2], [9,8,7]],\n",
-    "    [[3,4,5], [3,4,5]],\n",
-    "    [[6,7,8], [6,5,4]],\n",
-    "    [[9,0,1], [3,2,1]]\n",
+    "      #t=0      t=1\n",
+    "    [[0,1,2], [9,8,7]],#sample1\n",
+    "    [[3,4,5], [3,4,5]],#sample2\n",
+    "    [[6,7,8], [6,5,4]],#sample3\n",
+    "    [[9,0,1], [3,2,1]] #sample4\n",
     "])\n",
     "\n",
     "with tf.Session() as sess:\n",
@@ -351,6 +354,7 @@
     "X = tf.placeholder(tf.float32, shape=[None, n_steps, n_inputs])\n",
     "# 1차원 형태로 데이터 샘플 중 어떤 것을 날릴지 담을 seq_length\n",
     "seq_length = tf.placeholder(tf.int32, shape=[None])\n",
+    "\n",
     "basic_cell = tf.nn.rnn_cell.BasicRNNCell(num_units=n_neurons)\n",
     "# 위의 RNN cell 연결하고 입력 데이터를 넣는데, 가변적으로 설정한 데이터 샘플 넣는 텐서\n",
     "outputs, states = tf.nn.dynamic_rnn(basic_cell, X, dtype=tf.float32,\n",
@@ -1571,6 +1575,13 @@
     "        l, _ = sess.run([loss, train], feed_dict={X: x_one_hot, Y: y_data})\n",
     "        result = sess.run(prediction, feed_dict={X: x_one_hot})\n",
     "        print(i, 'loss:',l,'prediction: ', result, 'True Y: ', y_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "참조링크 : <a href='https://gomguard.tistory.com/145'>argmax의 axis=0,1,2에 따른 이해</a>"
    ]
   },
   {
