--- a/machine_learning/tensorflow/RNN/RNN.ipynb
+++ b/machine_learning/tensorflow/RNN/RNN.ipynb
@@ -164,7 +164,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -237,7 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## dynamic_rnn = 입력데이터 시간축으로 unstack + static_rnn + 아웃풋 stack까지 한번에!"
+    "## dynamic_rnn = 입력데이터 시간축으로 Transpose + unstack + static_rnn + 아웃풋 stack까지 한번에!"
    ]
   },
   {
