--- a/machine_learning/tensorflow/AutoEncoder/AutoEncoder.ipynb
+++ b/machine_learning/tensorflow/AutoEncoder/AutoEncoder.ipynb
@@ -1242,7 +1242,7 @@
     "\n",
     "### Create Mini-batch\n",
     "# len(nd_array) => 가장 바깥쪽 차원[] 안에 있는 요소들의 개수를 셈!\n",
-    "def shuflle_batch(features, labels, batch_size):\n",
+    "def shuffle_batch(features, labels, batch_size):\n",
     "    rnd_idx = np.random.permutation(len(features))\n",
     "    n_batches = len(features) / batch_size\n",
     "    # array_split하면 분할한 array들을 갖고 있는 list type으로 됨!->for문 사용가능\n",
@@ -1346,7 +1346,7 @@
     "reg_losses = tf.get_collection(tf.GraphKeys.REGULARIZATION_LOSSES)\n",
     "\n",
     "# 원래 Cost와 정규화 항 더해서 정규화시킨 새로운 Cost function\n",
-    "# reconstruction_loss는 평균값인 Scalar값, reg_losses는 28개 요소를 갖고 있는 1차원 리스트\n",
+    "# reconstruction_loss는 평균값인 Scalar값, reg_losses는 여러 요소를 갖고 있는 1차원 리스트\n",
     "reg_cost = tf.add_n([reconstruction_loss] + reg_losses)\n",
     "# GD\n",
     "train = tf.train.AdamOptimizer(learning_rate).minimize(reg_cost)\n",
@@ -1357,7 +1357,7 @@
     "    n_batches = len(train_x) // batch_size\n",
     "    for epoch in range(n_epochs):\n",
     "        for iteration in range(n_batches):\n",
-    "            batch_x, batch_y = next(shuflle_batch(train_x, train_y, batch_size))\n",
+    "            batch_x, batch_y = next(shuffle_batch(train_x, train_y, batch_size))\n",
     "            # 각 Mini-batch에서 GD 수행\n",
     "            _, input_x, output_x = sess.run([train, inputs, outputs],\n",
     "                                           feed_dict={inputs: batch_x})\n",
@@ -1418,6 +1418,13 @@
    "source": [
     "a = np.array([1])\n",
     "a.shape\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Denoising AutoEncoder"
    ]
   },
   {
