--- a/machine_learning/tensorflow/AutoEncoder/AutoEncoder.ipynb
+++ b/machine_learning/tensorflow/AutoEncoder/AutoEncoder.ipynb
@@ -1340,14 +1340,17 @@
     "# 현재 dense_layer의 디폴트 활성함수를 relu로 설정해놓아서 최종 결과물 출력시는 활성함수 없이 설정\n",
     "outputs = dense_layer(decoder, n_outputs, activation=None)\n",
     "\n",
-    "# Cost function\n",
+    "# Cost function - 하나의 실수값\n",
     "reconstruction_loss = tf.reduce_mean(tf.square(inputs - outputs))\n",
     "# 정규화시킨 Cost를 만들기 위해 정규화 항 설정\n",
+    "# get_collection은 리스트 형태로 반환함!\n",
     "reg_losses = tf.get_collection(tf.GraphKeys.REGULARIZATION_LOSSES)\n",
     "\n",
     "# 원래 Cost와 정규화 항 더해서 정규화시킨 새로운 Cost function\n",
-    "# reconstruction_loss는 평균값인 Scalar값, reg_losses는 여러 요소를 갖고 있는 1차원 리스트\n",
+    "# 리스트 끼리 더하면 연산이 되는 것이 아닌 리스트 요소가 끝에 추가됨!!!!\n",
+    "# 그래서 하나의 실수값을 []리스트로 씌우고 요소를 reg_losses와 합해서 그 합한 요소들끼리 더함(add)!! => 결국 하나의 실수값으로 정규화된 cost값이 도출!\n",
     "reg_cost = tf.add_n([reconstruction_loss] + reg_losses)\n",
+    "\n",
     "# GD\n",
     "train = tf.train.AdamOptimizer(learning_rate).minimize(reg_cost)\n",
     "\n",
@@ -1419,20 +1422,6 @@
     "a = np.array([1])\n",
     "a.shape\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Denoising AutoEncoder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
