fibonacci realized by recursive and iterative

--- a/Algorithm(Python)/Basic_practice.ipynb
+++ b/Algorithm(Python)/Basic_practice.ipynb
@@ -169,6 +169,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4강 - 1번 문제(피보나치 수열)\n",
+    "\n",
+    "인자로 0 또는 양의 정수인 x 가 주어질 때, Fibonacci 순열의 해당 값을 구하여 반환하는 함수 solution() 을 완성하세요.\n",
+    "\n",
+    "Fibonacci 순열은 아래와 같이 정의됩니다.\n",
+    "F0 = 0\n",
+    "F1 = 1\n",
+    "Fn = Fn - 1 + Fn - 2, n >= 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- F0 = solution(0) -> 0 반환\n",
+    "- F1 = solution(1) -> 1 반환\n",
+    "- F2 = solution(2) = solution(1) + solution(0) -> 1 + 0 = 1 반환\n",
+    "- F3 = solution(3) = solution(2) + solution(1) = solution(1) + solution(0) + solution(1) = 1 + 0 + 1 = 2 반환\n",
+    "- F4 = solution(4) = solution(3) + solution(2) = solution(2) + solution(1) + solution(1) + solution(0) = solution(1) + solution(0) + solution(1) + solution(1) + solution(0) = 1 + 0 + 1 + 1 + 0 = 3 반환\n",
+    "... 계속 반복"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. 재귀알고리즘 사용\n",
+    "def solution(x):\n",
+    "    # x가 2보다 작을때(0또는 1일 때는 해당 값을 반환함)\n",
+    "    if x < 2:\n",
+    "        return x\n",
+    "    else:\n",
+    "        return solution(x-1) + solution(x-2) \n",
+    "\n",
+    "test = solution(7)\n",
+    "print(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. iterative 사용 -> 반복학습하자..! 어렵다 ㅜㅜ\n",
+    "def solution(x):\n",
+    "    a, b = 0, 1\n",
+    "    for i in range(0, x):\n",
+    "        a, b = b, a + b\n",
+    "    return a \n",
+    "\n",
+    "test = solution(7)\n",
+    "print(test)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
