클래스 연결리스트 연습중..

--- a/Algorithm(Python)/Basic_practice.ipynb
+++ b/Algorithm(Python)/Basic_practice.ipynb
@@ -70,6 +70,7 @@
     "        return idx_lst\n",
     "    # 인덱스 초기화 \n",
     "    start_at = -1\n",
+    "    # while 안에 try, except 구문 있게하자!\n",
     "    while True:\n",
     "        try:\n",
     "            # 먼저 처음부터 끝(입력 안하면 디폴트로 끝 인덱스임) 사이의 인덱스 최솟값 반환\n",
@@ -79,6 +80,7 @@
     "            start_at = idx\n",
     "        except ValueError:\n",
     "            break\n",
+    "    #while이랑 같은 indent위치에 있어야 그동안 요소들이 첨가된 idx_lst 한 번만 출력!\n",
     "    return idx_lst"
    ]
   },
@@ -149,8 +151,9 @@
     "    # 인덱스 최대값 할당\n",
     "    upper = len(L) - 1\n",
     "    \n",
-    "    # 인덱스 최솟값 >= 인덱스 최댓값 될 때까지 반복\n",
-    "    while lower < upper:\n",
+    "    # 인덱스 최솟값 > 인덱스 최댓값 될 때까지 반복\n",
+    "    # '=' 하나가 없어서 효율성 테스트에서 통과 못한다..(lower=upper index일 때도 while문 돌도록 하기)\n",
+    "    while lower <= upper:\n",
     "        # 중간 인덱스 설정(이진 기준 설정)\n",
     "        middle = (lower + upper) // 2\n",
     "        \n",
@@ -243,6 +246,68 @@
     "\n",
     "test = solution(7)\n",
     "print(test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 7강 - 연결리스트 순회 구현하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    # 노드안에 있는 데이터와 링크가 가르키는 것 없음!\n",
+    "    def __init__(self, item):\n",
+    "        self.data = item\n",
+    "        # 이동할 다음 노드 가리키는 링크\n",
+    "        self.next = None\n",
+    "\n",
+    "class LinkedList:\n",
+    "    # 생성 시 노드 개수는 0임, head와 tail도 None임\n",
+    "    def __init__(self):\n",
+    "        self.nodeCount = 0\n",
+    "        self.head = None\n",
+    "        self.tail = None\n",
+    "    # 다른 노드로 가는 메서드\n",
+    "    # pos번째 노드 자체를 리턴하려는 것\n",
+    "    def getAt(self, pos):\n",
+    "        # 0번째 노드이거나 노드 번째수가 노드 개수보다 클 때 None\n",
+    "        if pos < 1 or pos > self.nodeCount:\n",
+    "            return None\n",
+    "        # 첫번째 노드\n",
+    "        i = 1\n",
+    "        # 첫 번째 리스트를 curr(현재 리스트)로 설정\n",
+    "        curr = self.head\n",
+    "        # i가 pos번째 보다 작은 값이면 무한 반복\n",
+    "        while i < pos:\n",
+    "            # Node 클래스에 있는 self.next 이용\n",
+    "            curr = curr.next\n",
+    "            # 첫 번째 노드에서 1씩 증가한 번째 노드로 이동\n",
+    "            i += 1\n",
+    "        # 마지막에 있는 노드 반환\n",
+    "        return curr\n",
+    "\n",
+    "    def traverse(self):\n",
+    "        node_lst = []\n",
+    "        # 빈 연결 리스트에 대한 순회 결과\n",
+    "        if self.head == None:\n",
+    "            return []\n",
+    "        # 처음 노드를 head로 설정\n",
+    "        curr = self.head\n",
+    "        # 처음 노드의 data를 리스트에 첨가\n",
+    "        node_lst.append(curr.data)\n",
+    "        \n",
+    "        # 노드가 1개 이상 있는 연결 리스트에 대한 순회 결과\n",
+    "        while curr.next is not None:\n",
+    "            curr = curr.next\n",
+    "            node_lst.append(curr.data)\n",
+    "        return node_lst"
    ]
   },
   {
