연결리스트 삽입,삭제

--- a/Algorithm(Python)/Basic_practice.ipynb
+++ b/Algorithm(Python)/Basic_practice.ipynb
@@ -315,7 +315,142 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "##### 남이 푼 풀이 ######\n",
+    "\n",
+    "# head,tail이 가르키는 것은 데이터+링크를 포함하고 있는 '노드'! 따라서 self.head, self.tail에는 Node class의 인스턴스를 담고 있으므로\n",
+    "# Node 클래스의 data, next에 접근 가능함!\n",
+    "# next(링크)를 타고 다음 노드로 넘어감!\n",
+    "\n",
+    "class Node:\n",
+    "    def __init__(self, item):\n",
+    "        # 노드안에 있는 데이터\n",
+    "        self.data = item\n",
+    "        # 다음으로 이동할 노드를 가리키는 링크\n",
+    "        self.next = None\n",
+    "\n",
+    "class LinkedList:\n",
+    "    def __init__(self):\n",
+    "        # 노드 개수\n",
+    "        self.nodeCount = 0\n",
+    "        # 첫 노드를 가리킴\n",
+    "        self.head = None\n",
+    "        # 끝 노드를 가리킴\n",
+    "        self.tail = None\n",
+    "    # pos = '몇' 번째 노드인가\n",
+    "    def getAt(self, pos):\n",
+    "        # 노드는 1번째부터 시작하므로 pos=0인자로 넣는건 None을 반환\n",
+    "        if pos < 1 or pos > self.nodeCount:\n",
+    "            return None\n",
+    "        # 찾으러갈 때 한번만 순회하면서 가도록 하기 위한 조건(i<pos)을 달기 위해 정의\n",
+    "        i = 1\n",
+    "        # 현재 노드 : head노드로 시작!\n",
+    "        curr = self.head\n",
+    "        # 1)pos=1일때, i=1이기 때문에 while문 돌지않고 curr을 return\n",
+    "        # 2)pos=2일때, i=1<pos=2이기 때문에 다음노드로 이동할 링크 할당한 후 i+1 시키기! 그러면 i=2가 되고 i<pos만족하지 못하고 curr을 return 함!\n",
+    "        while i < pos:\n",
+    "            curr = curr.next\n",
+    "            i += 1\n",
+    "        return curr\n",
+    "\n",
+    "    def traverse(self):\n",
+    "        # 데이터 담을 빈 리스트 정의\n",
+    "        link_lst = []\n",
+    "        # 첫 번째 노드 정의\n",
+    "        node = self.head\n",
+    "        # head 노드가 빈리스트가 아니라면!\n",
+    "        while node is not None:\n",
+    "            # 그 노드에 있는 데이터 담기!\n",
+    "            link_lst.append(node.data)\n",
+    "            # next를 이용해 다음 노드로 이동!\n",
+    "            node = node.next\n",
+    "        return link_lst\n",
+    "        \n",
+    "# 이 solution 함수는 그대로 두어야 합니다.\n",
+    "def solution(x):\n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 8강 - 연결리스트 삽입"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insertAt(self, pos, newNode):\n",
+    "    # pos가 올바른 값을 갖는 범위에 있는지 검사하기 위함\n",
+    "    if pos < 1 or pos > self.nodeCount + 1:\n",
+    "        return False\n",
+    "    # 리스트 맨 앞에다가 새로운 노드를 삽입하는 경우\n",
+    "    if pos == 1:\n",
+    "        # 삽입된 새로운 노드의 링크를 원래 맨앞에 있던 head 노드에다가 연결\n",
+    "        newNode.next = self.head\n",
+    "        # 그리고 새로운 head를 맨 앞에 삽인된 newNode에다가 설정\n",
+    "        self.head = newNode\n",
+    "    # 리스트 중간에다가 새로운 노드를 삽입하는 경우    \n",
+    "    else:\n",
+    "        # pos번째 바로 이전인 prev 노드를 찾자\n",
+    "        prev = self.getAt(pos - 1)\n",
+    "        # 중간에 삽입된 새로운 노드의 링크를 prev의 다음 노드에다가 연결\n",
+    "        newNode.next = prev.next\n",
+    "        # prev의 링크를 새롭게 삽입된 노드에다가 연결\n",
+    "        prev.next = newNode\n",
+    "    # 리스트 맨 뒤에다가 새로운 노드를 삽입하는 경우\n",
+    "    if pos == self.nodeCount + 1:\n",
+    "        # 원래의 tail을 새롭게 삽입된 노드로 설정\n",
+    "        self.tail = newNode\n",
+    "    ## 참고로 빈 리스트에다가 최초로 노드를 삽입하는 경우\n",
+    "    # 리스트 맨 앞, 맨 뒤에 삽입하는 2개 조건을 동시에 만족하면서 heed, tail잘 조정\n",
+    "    \n",
+    "    #마지막으로 새로운 노드를 삽입했으니 nodeCount를 1개 증가\n",
+    "    self.nodeCount += 1\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insertAt(self, pos, newNode):\n",
+    "    # pos가 올바른 값을 갖는 범위에 있는지 검사하기 위함\n",
+    "    if pos < 1 or pos > self.nodeCount + 1:\n",
+    "        return False\n",
+    "    # 리스트 맨 앞에다가 새로운 노드를 삽입하는 경우\n",
+    "    if pos == 1:\n",
+    "        # 삽입된 새로운 노드의 링크를 원래 맨앞에 있던 head 노드에다가 연결\n",
+    "        newNode.next = self.head\n",
+    "        # 그리고 새로운 head를 맨 앞에 삽인된 newNode에다가 설정\n",
+    "        self.head = newNode\n",
+    "    # 리스트 중간에다가 새로운 노드를 삽입하는 경우    \n",
+    "    else:\n",
+    "        ##### 달라진 부분-맨 뒤 리스트에 삽입하는 경우 앞에서부터 찾지 않고 바로 tail로 가서 즉시 삽입!\n",
+    "        if pos == self.nodeCount + 1:\n",
+    "            # prev노드는 tail의 노드로 할당\n",
+    "            prev = self.tail\n",
+    "        else:\n",
+    "            # pos번째 바로 이전인 prev 노드를 찾자\n",
+    "            prev = self.getAt(pos - 1)\n",
+    "        # 중간에 삽입된 새로운 노드의 링크를 prev의 다음 노드에다가 연결\n",
+    "        newNode.next = prev.next\n",
+    "        # prev의 링크를 새롭게 삽입된 노드에다가 연결\n",
+    "        prev.next = newNode\n",
+    "    \n",
+    "    ## 참고로 빈 리스트에다가 최초로 노드를 삽입하는 경우\n",
+    "    # 리스트 맨 앞, 맨 뒤에 삽입하는 2개 조건을 동시에 만족하면서 heed, tail잘 조정\n",
+    "    \n",
+    "    #마지막으로 새로운 노드를 삽입했으니 nodeCount를 1개 증가\n",
+    "    self.nodeCount += 1\n",
+    "    return True"
+   ]
   }
  ],
  "metadata": {
