--- a/Algorithm(Python)/Basic_practice.ipynb
+++ b/Algorithm(Python)/Basic_practice.ipynb
@@ -451,6 +451,493 @@
     "    self.nodeCount += 1\n",
     "    return True"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 9강 -연결리스트 삭제"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "\n",
+    "    def __init__(self, item):\n",
+    "        self.data = item\n",
+    "        self.next = None\n",
+    "\n",
+    "\n",
+    "class LinkedList:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.nodeCount = 0\n",
+    "        self.head = Node(None)\n",
+    "        self.tail = None\n",
+    "        self.head.next = self.tail\n",
+    "\n",
+    "\n",
+    "    def traverse(self):\n",
+    "        result = []\n",
+    "        curr = self.head\n",
+    "        while curr.next:\n",
+    "            curr = curr.next\n",
+    "            result.append(curr.data)\n",
+    "        return result\n",
+    "\n",
+    "\n",
+    "    def getAt(self, pos):\n",
+    "        if pos < 0 or pos > self.nodeCount:\n",
+    "            return None\n",
+    "\n",
+    "        i = 0\n",
+    "        curr = self.head\n",
+    "        while i < pos:\n",
+    "            curr = curr.next\n",
+    "            i += 1\n",
+    "\n",
+    "        return curr\n",
+    "\n",
+    "\n",
+    "    def insertAfter(self, prev, newNode):\n",
+    "        newNode.next = prev.next\n",
+    "        if prev.next is None:\n",
+    "            self.tail = newNode\n",
+    "        prev.next = newNode\n",
+    "        self.nodeCount += 1\n",
+    "        return True\n",
+    "\n",
+    "\n",
+    "    def insertAt(self, pos, newNode):\n",
+    "        if pos < 1 or pos > self.nodeCount + 1:\n",
+    "            return False\n",
+    "\n",
+    "        if pos != 1 and pos == self.nodeCount + 1:\n",
+    "            prev = self.tail\n",
+    "        else:\n",
+    "            prev = self.getAt(pos - 1)\n",
+    "        return self.insertAfter(prev, newNode)\n",
+    "\n",
+    "    def popAfter(self, prev):\n",
+    "        # prev가 마지막 노드를 지정하게 되면 None\n",
+    "        if prev == self.nodeCount:\n",
+    "            return None\n",
+    "        # 삭제할 curr 노드 지정\n",
+    "        curr = prev.next\n",
+    "        # curr이 마지막 노드일 때\n",
+    "        if curr.next == None:\n",
+    "            prev.next = None\n",
+    "            self.tail = prev\n",
+    "        # curr이 더미노드 다음 노드부터 마지막 이전 노드 중 하나일 때\n",
+    "        else:\n",
+    "            prev.next = curr.next\n",
+    "        self.nodeCount -= 1\n",
+    "        return curr.data\n",
+    "\n",
+    "    def popAt(self, pos):\n",
+    "        if pos < 1 or pos > self.nodeCount:\n",
+    "            raise IndexError\n",
+    "        # popAfter을 이용하기 위해 이전 노드 찾기\n",
+    "        prev = self.getAt(pos-1)\n",
+    "        return self.popAfter(prev)\n",
+    "             \n",
+    "def solution(x):\n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 10강 - 양방향 연결 리스트\n",
+    "\n",
+    "## 역방향 순회"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "\n",
+    "    def __init__(self, item):\n",
+    "        self.data = item\n",
+    "        self.prev = None\n",
+    "        self.next = None\n",
+    "\n",
+    "\n",
+    "class DoublyLinkedList:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.nodeCount = 0\n",
+    "        self.head = Node(None)\n",
+    "        self.tail = Node(None)\n",
+    "        self.head.prev = None\n",
+    "        self.head.next = self.tail\n",
+    "        self.tail.prev = self.head\n",
+    "        self.tail.next = None\n",
+    "\n",
+    "\n",
+    "    def reverse(self):\n",
+    "        data = []\n",
+    "        curr = self.tail\n",
+    "        while curr.prev.prev:\n",
+    "            # curr의 이전 노드 prev로 이동\n",
+    "            prev = curr.prev\n",
+    "            # 이전 노드인 prev의 데이터 담기\n",
+    "            data.append(prev.data)\n",
+    "            # 이전 노드인 prev를 curr노드로 업데이트\n",
+    "            curr = prev\n",
+    "        return data\n",
+    "\n",
+    "    def getAt(self, pos):\n",
+    "        if pos < 0 or pos > self.nodeCount:\n",
+    "            return None\n",
+    "\n",
+    "        if pos > self.nodeCount // 2:\n",
+    "            i = 0\n",
+    "            curr = self.tail\n",
+    "            while i < self.nodeCount - pos + 1:\n",
+    "                curr = curr.prev\n",
+    "                i += 1\n",
+    "        else:\n",
+    "            i = 0\n",
+    "            curr = self.head\n",
+    "            while i < pos:\n",
+    "                curr = curr.next\n",
+    "                i += 1\n",
+    "\n",
+    "        return curr\n",
+    "\n",
+    "\n",
+    "    def insertAfter(self, prev, newNode):\n",
+    "        next = prev.next\n",
+    "        newNode.prev = prev\n",
+    "        newNode.next = next\n",
+    "        prev.next = newNode\n",
+    "        next.prev = newNode\n",
+    "        self.nodeCount += 1\n",
+    "        return True\n",
+    "\n",
+    "\n",
+    "    def insertAt(self, pos, newNode):\n",
+    "        if pos < 1 or pos > self.nodeCount + 1:\n",
+    "            return False\n",
+    "\n",
+    "        prev = self.getAt(pos - 1)\n",
+    "        return self.insertAfter(prev, newNode)\n",
+    "\n",
+    "\n",
+    "def solution(x):\n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 노드 삽입"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "\n",
+    "    def __init__(self, item):\n",
+    "        self.data = item\n",
+    "        self.prev = None\n",
+    "        self.next = None\n",
+    "\n",
+    "\n",
+    "class DoublyLinkedList:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.nodeCount = 0\n",
+    "        self.head = Node(None)\n",
+    "        self.tail = Node(None)\n",
+    "        self.head.prev = None\n",
+    "        self.head.next = self.tail\n",
+    "        self.tail.prev = self.head\n",
+    "        self.tail.next = None\n",
+    "\n",
+    "\n",
+    "    def traverse(self):\n",
+    "        result = []\n",
+    "        curr = self.head\n",
+    "        while curr.next.next:\n",
+    "            curr = curr.next\n",
+    "            result.append(curr.data)\n",
+    "        return result\n",
+    "\n",
+    "\n",
+    "    def insertBefore(self, next, newNode):\n",
+    "        # 기존의 prev노드를 우선 지정(for prev다음에 newNode가 삽입될 것이기 때문)\n",
+    "        prev = next.prev\n",
+    "        # newNode의 이전노드를 우선 설정\n",
+    "        newNode.prev = prev\n",
+    "        # newNode의 다음노드를 우선 설정\n",
+    "        newNode.next = next\n",
+    "        # 기존 prev노드와 next노드간의 연결 해제 후 newNode랑 연결\n",
+    "        prev.next = newNode\n",
+    "        next.prev = newNode\n",
+    "        self.nodeCount += 1\n",
+    "        return True\n",
+    "    \n",
+    "def solution(x):\n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 노드 삭제(popAfter, popBefore, popAt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "\n",
+    "    def __init__(self, item):\n",
+    "        self.data = item\n",
+    "        self.prev = None\n",
+    "        self.next = None\n",
+    "\n",
+    "\n",
+    "class DoublyLinkedList:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.nodeCount = 0\n",
+    "        self.head = Node(None)\n",
+    "        self.tail = Node(None)\n",
+    "        self.head.prev = None\n",
+    "        self.head.next = self.tail\n",
+    "        self.tail.prev = self.head\n",
+    "        self.tail.next = None\n",
+    "\n",
+    "\n",
+    "    def traverse(self):\n",
+    "        result = []\n",
+    "        curr = self.head\n",
+    "        while curr.next.next:\n",
+    "            curr = curr.next\n",
+    "            result.append(curr.data)\n",
+    "        return result\n",
+    "\n",
+    "\n",
+    "    def getAt(self, pos):\n",
+    "        if pos < 0 or pos > self.nodeCount:\n",
+    "            return None\n",
+    "\n",
+    "        if pos > self.nodeCount // 2:\n",
+    "            i = 0\n",
+    "            curr = self.tail\n",
+    "            while i < self.nodeCount - pos + 1:\n",
+    "                curr = curr.prev\n",
+    "                i += 1\n",
+    "        else:\n",
+    "            i = 0\n",
+    "            curr = self.head\n",
+    "            while i < pos:\n",
+    "                curr = curr.next\n",
+    "                i += 1\n",
+    "\n",
+    "        return curr\n",
+    "\n",
+    "\n",
+    "    def insertAfter(self, prev, newNode):\n",
+    "        next = prev.next\n",
+    "        newNode.prev = prev\n",
+    "        newNode.next = next\n",
+    "        prev.next = newNode\n",
+    "        next.prev = newNode\n",
+    "        self.nodeCount += 1\n",
+    "        return True\n",
+    "\n",
+    "\n",
+    "    def insertAt(self, pos, newNode):\n",
+    "        if pos < 1 or pos > self.nodeCount + 1:\n",
+    "            return False\n",
+    "\n",
+    "        prev = self.getAt(pos - 1)\n",
+    "        return self.insertAfter(prev, newNode)\n",
+    "\n",
+    "\n",
+    "    def popAfter(self, prev):\n",
+    "        ### 더미 노드들만 있을 경우 ###\n",
+    "        if self.head == self.tail:\n",
+    "            return None\n",
+    "        ### 삭제할 노드가 중간에 있을 경우 ###\n",
+    "        # next노드 지정\n",
+    "        next = prev.next.next\n",
+    "        # 삭제할 curr노드 지정\n",
+    "        curr = prev.next\n",
+    "        # prev -> next 노드 연결\n",
+    "        prev.next = next\n",
+    "        # next -> prev 노드 연결\n",
+    "        next.prev = prev\n",
+    "        self.nodeCount -= 1\n",
+    "        return curr.data\n",
+    "        \n",
+    "    def popBefore(self, next):\n",
+    "        ### 더미 노드들만 있을 경우 ###\n",
+    "        if self.head == self.tail:\n",
+    "            return None\n",
+    "        ### 삭제할 노드가 중간에 있을 경우 ###\n",
+    "        # next와 연결할 prev노드 지정\n",
+    "        prev = next.prev.prev\n",
+    "        # 삭제할 curr노드 지정\n",
+    "        curr = next.prev\n",
+    "        # next -> prev 노드 연결\n",
+    "        next.prev = prev\n",
+    "        # prev -> next 노드 연결\n",
+    "        prev.next = next\n",
+    "        self.nodeCount -= 1\n",
+    "        return curr.data\n",
+    "\n",
+    "    def popAt(self, pos):\n",
+    "        if pos < 0 or pos > self.nodeCount:\n",
+    "            raise IndexError\n",
+    "        # 뒷부분의 노드를 삭제하는 경우 -> 어차피 getAt에서 //2 가 들어가서 뒷부분으로 먼저 접근하기 때문에 여기서 굳이 사용해줄 필요는 없다.\n",
+    "        if pos > self.nodeCount // 2:\n",
+    "            prev = self.getAt(pos-1)\n",
+    "            return self.popAfter(prev)\n",
+    "        else:\n",
+    "            next = self.getAt(pos+1)\n",
+    "            return self.popBefore(next)\n",
+    "    # popAt 다른 사람의 풀이(popAfter만 사용했을 떄)\n",
+    "    def popAt(self, pos):\n",
+    "        if pos < 1 or pos > self.nodeCount :\n",
+    "            raise IndexError\n",
+    "\n",
+    "        prev = self.getAt(pos - 1)\n",
+    "        curr=self.popAfter(prev)\n",
+    "        return curr\n",
+    "            \n",
+    "def solution(x):\n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2개 양방향 연결 리스트 병합"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "\n",
+    "    def __init__(self, item):\n",
+    "        self.data = item\n",
+    "        self.prev = None\n",
+    "        self.next = None\n",
+    "\n",
+    "\n",
+    "class DoublyLinkedList:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.nodeCount = 0\n",
+    "        self.head = Node(None)\n",
+    "        self.tail = Node(None)\n",
+    "        self.head.prev = None\n",
+    "        self.head.next = self.tail\n",
+    "        self.tail.prev = self.head\n",
+    "        self.tail.next = None\n",
+    "\n",
+    "    # L : 문제에서 L2. 즉, 병합할 양방향 연결리스트\n",
+    "    def concat(self, L):\n",
+    "        ### L이 빈 리스트일 경우\n",
+    "        if L.nodeCount == 0:\n",
+    "            return True\n",
+    "        # self의 tail의 이전노드 지정\n",
+    "        self_end = self.tail.prev\n",
+    "        # L의 head의 다음노드 지정\n",
+    "        L_start = L.head.next\n",
+    "        # 위 두 노드를 연결해 병합\n",
+    "        self_end.next = L_start\n",
+    "        L_start.prev = self_end\n",
+    "        # 병합된 리스트들의 tail 재지정\n",
+    "        self.tail = L.tail\n",
+    "        self.nodeCount = self.nodeCount + L.nodeCount\n",
+    "        return True\n",
+    "        \n",
+    "    def traverse(self):\n",
+    "        result = []\n",
+    "        curr = self.head\n",
+    "        while curr.next.next:\n",
+    "            curr = curr.next\n",
+    "            result.append(curr.data)\n",
+    "        return result\n",
+    "\n",
+    "    \n",
+    "    def getAt(self, pos):\n",
+    "        if pos < 0 or pos > self.nodeCount:\n",
+    "            return None\n",
+    "\n",
+    "        if pos > self.nodeCount // 2:\n",
+    "            i = 0\n",
+    "            curr = self.tail\n",
+    "            while i < self.nodeCount - pos + 1:\n",
+    "                curr = curr.prev\n",
+    "                i += 1\n",
+    "        else:\n",
+    "            i = 0\n",
+    "            curr = self.head\n",
+    "            while i < pos:\n",
+    "                curr = curr.next\n",
+    "                i += 1\n",
+    "\n",
+    "        return curr\n",
+    "\n",
+    "\n",
+    "    def insertAfter(self, prev, newNode):\n",
+    "        next = prev.next\n",
+    "        newNode.prev = prev\n",
+    "        newNode.next = next\n",
+    "        prev.next = newNode\n",
+    "        next.prev = newNode\n",
+    "        self.nodeCount += 1\n",
+    "        return True\n",
+    "\n",
+    "\n",
+    "    def insertAt(self, pos, newNode):\n",
+    "        if pos < 1 or pos > self.nodeCount + 1:\n",
+    "            return False\n",
+    "\n",
+    "        prev = self.getAt(pos - 1)\n",
+    "        return self.insertAfter(prev, newNode)\n",
+    "\n",
+    "\n",
+    "def solution(x):\n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
