스택 응용 실습문제 연습

--- a/Algorithm(Python)/Basic_practice.ipynb
+++ b/Algorithm(Python)/Basic_practice.ipynb
@@ -933,6 +933,215 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 12강 - 스택 응용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ArrayStack:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.data = []\n",
+    "\n",
+    "    def size(self):\n",
+    "        return len(self.data)\n",
+    "\n",
+    "    def isEmpty(self):\n",
+    "        return self.size() == 0\n",
+    "\n",
+    "    def push(self, item):\n",
+    "        self.data.append(item)\n",
+    "\n",
+    "    def pop(self):\n",
+    "        return self.data.pop()\n",
+    "\n",
+    "    def peek(self):\n",
+    "        return self.data[-1]\n",
+    "\n",
+    "prec = {\n",
+    "    '*': 3, '/': 3,\n",
+    "    '+': 2, '-': 2,\n",
+    "    '(': 1\n",
+    "}\n",
+    "\n",
+    "def solution(S):\n",
+    "    opStack = ArrayStack()\n",
+    "    answer = ''\n",
+    "    # 문자열 S의 한 글자씩 loop\n",
+    "    for c in S:\n",
+    "        # 피연산자일 경우\n",
+    "        if c not in '+-*/()':\n",
+    "            answer += str(c)\n",
+    "        # c가 '('일 경우\n",
+    "        elif c == '(':\n",
+    "            opStack.push(c)\n",
+    "        # c가 일반 연산자일 경우\n",
+    "        elif c in prec:\n",
+    "            # 우선 스택이 비어있으면 push\n",
+    "            if opStack.size() == 0:\n",
+    "                opStack.push(c)\n",
+    "            # 기존 스택에 데이터가 있는데 맨위가 '('이라면\n",
+    "            elif opStack.peek() == '(':\n",
+    "                opStack.push(c)\n",
+    "            # 마주친 연산자가 스택 안에 있는 연산자와 우선순위 조정하는 경우\n",
+    "            # 마주친 연산자 순위 <= 스택에 이미 들어있는 연산자 순위\n",
+    "            elif prec[opStack.peek()] >= prec[c]:\n",
+    "                # 스택에 이미 들어있는 연산자가 여러개일 경우, 마주친 연산자 순위와 계속 비교 ****\n",
+    "                while prec[opStack.peek()] >= prec[c]:\n",
+    "                    # 스택에 이미 있는 연산자를 모두 pop\n",
+    "                    answer += str(opStack.pop())\n",
+    "                    # 스택에 있는 모든 연산자 다 꺼냈을 경우\n",
+    "                    if opStack.isEmpty():\n",
+    "                        opStack.push(c)\n",
+    "                        break\n",
+    "            # 마주친 연산자 순위 > 스택에 이미 들어있는 연산자 순위\n",
+    "            elif prec[opStack.peek()] < prec[c]:\n",
+    "                # 마주친 연산자를 스택에 넣기\n",
+    "                opStack.push(c)\n",
+    "        # c가 ')'일 경우\n",
+    "        elif c == ')':\n",
+    "            # 스택에 있는 상위 데아터하나씩 보면서 '('가 나올때까지 모두 pop\n",
+    "            while opStack.peek() != '(':\n",
+    "                answer += opStack.pop()\n",
+    "            # 스택에 남아있는 '('처리\n",
+    "            opStack.pop()\n",
+    "    # 스택이 빌 때까지 모두 pop시키기\n",
+    "    while not opStack.isEmpty():\n",
+    "        answer += opStack.pop()\n",
+    "            \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 다른사람 풀이1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(S):\n",
+    "    opStack = ArrayStack()\n",
+    "    answer = ''\n",
+    "    for x in S:\n",
+    "        if x in prec:\n",
+    "            if x == '(' or opStack.isEmpty():\n",
+    "                pass\n",
+    "            else:\n",
+    "                if prec[x] <= prec[opStack.peek()]:\n",
+    "                    answer += opStack.pop()\n",
+    "            opStack.push(x)\n",
+    "        elif x == ')':\n",
+    "            while opStack.peek() != '(':\n",
+    "                answer += opStack.pop()\n",
+    "            opStack.pop()\n",
+    "        else:\n",
+    "            answer += x\n",
+    "    while not opStack.isEmpty():\n",
+    "        answer += opStack.pop()\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 다른사람 풀이2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(S):\n",
+    "    answer = ''\n",
+    "    opStack = ArrayStack()\n",
+    "    for char in S:\n",
+    "        if char in prec:\n",
+    "            if opStack.isEmpty():\n",
+    "                opStack.push(char)\n",
+    "            elif char == '(':\n",
+    "                opStack.push(char)\n",
+    "            elif prec[char] > prec[opStack.peek()]:\n",
+    "                opStack.push(char)\n",
+    "            elif prec[char] <= prec[opStack.peek()]:\n",
+    "                answer += opStack.pop()\n",
+    "                opStack.push(char)\n",
+    "            else:\n",
+    "                opStack.push(char)\n",
+    "        elif char == ')':\n",
+    "            while opStack.peek() != '(':\n",
+    "                answer += opStack.pop()\n",
+    "            opStack.pop()\n",
+    "        else:            \n",
+    "            answer += char\n",
+    "    while opStack.isEmpty() == False:\n",
+    "        answer += opStack.pop()\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 연습1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(S):\n",
+    "    opStack = ArrayStack()\n",
+    "    answer = ''\n",
+    "    # 문자열 S의 한 글자씩 loop\n",
+    "    for c in S:\n",
+    "        # c가 prec 중 하나일 때\n",
+    "        if c in prec:\n",
+    "            # 스택이 빈 상태이거나 c == '('일 때\n",
+    "            if opStack.isEmpty() or c == '(':\n",
+    "                opStack.push(c)\n",
+    "            # 마주친 연산자와 스택에 있는 맨 위 연산자와 우선순위 조정\n",
+    "            elif prec[c] <= prec[opStack.peek()]:\n",
+    "                while prec[c] <= prec[opStack.peek()]:\n",
+    "                    answer += opStack.pop()\n",
+    "                    if opStack.isEmpty():\n",
+    "                        opStack.push(c)\n",
+    "                        break\n",
+    "            else:\n",
+    "                opStack.push(c)\n",
+    "        # c == ')'일 때\n",
+    "        elif c == ')':\n",
+    "            while opStack.peek() != '(':\n",
+    "                answer += opStack.pop()\n",
+    "            # 스택에 남아있는 '('처리\n",
+    "            opStack.pop()\n",
+    "        # c가 피연산자일 때\n",
+    "        else:\n",
+    "            answer += c\n",
+    "    while not opStack.isEmpty():\n",
+    "        answer += opStack.pop()\n",
+    "    \n",
+    "    return answer"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
